[gd_scene load_steps=19 format=3 uid="uid://dtd52qbyyfhyb"]

[ext_resource type="Script" path="res://Scripts/HealthComponent.gd" id="1_ud7fu"]
[ext_resource type="Script" path="res://Scripts/KnockBack_Component.gd" id="2_05xen"]
[ext_resource type="Texture2D" uid="uid://3ldc4qhun0do" path="res://Art/Characters/Enemies/Lumber Bot/Lumber Bot.png" id="3_tbseo"]
[ext_resource type="Script" path="res://Scripts/Enemy controllers/Enemy_State_Machine.gd" id="4_a0ufa"]
[ext_resource type="Script" path="res://Scripts/Enemy controllers/Enemy States/Enemy_Idle_Melee.gd" id="5_7hv1n"]
[ext_resource type="Script" path="res://Scripts/Enemy controllers/Enemy States/Enemy_Attack_Melee.gd" id="6_mjvca"]
[ext_resource type="Script" path="res://Scripts/Enemy controllers/Enemy States/Enemy_Die.gd" id="7_r1604"]
[ext_resource type="Script" path="res://Scripts/Enemy controllers/Enemy States/Enemy_Pursue_Melee.gd" id="8_yfgwt"]
[ext_resource type="Script" path="res://Scripts/Attack_component.gd" id="9_xfux6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ekegm"]
radius = 8.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7bth"]
size = Vector2(8, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm3b1"]
size = Vector2(7, 15)

[sub_resource type="Animation" id="Animation_eml71"]
resource_name = "attack"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [30, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_Component/Attack_Right/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ygtx6"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [40, 49]
}

[sub_resource type="Animation" id="Animation_nlgxd"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_yj4e8"]
resource_name = "turn_to_walk"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_gkscq"]
resource_name = "walk"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vi1w7"]
_data = {
"attack": SubResource("Animation_eml71"),
"die": SubResource("Animation_ygtx6"),
"idle": SubResource("Animation_nlgxd"),
"turn_to_walk": SubResource("Animation_yj4e8"),
"walk": SubResource("Animation_gkscq")
}

[node name="Lumber bot" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 13

[node name="Health_Component" type="Node2D" parent="." groups=["Enemies"]]
script = ExtResource("1_ud7fu")
max_health = 20

[node name="KnockBack_component" type="Node2D" parent="." node_paths=PackedStringArray("CB2D") groups=["Enemies"]]
script = ExtResource("2_05xen")
CB2D = NodePath("..")

[node name="Attack_Component" type="Node2D" parent="." node_paths=PackedStringArray("CB2D", "right", "on_contact") groups=["Enemies"]]
script = ExtResource("9_xfux6")
CB2D = NodePath("..")
group = "Player"
deal_knockback = 80
right = NodePath("Attack_Right")
on_contact = NodePath("Contact_Damage_Area")

[node name="Attack_Right" type="Area2D" parent="Attack_Component"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Component/Attack_Right"]
position = Vector2(26, 1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ekegm")
disabled = true

[node name="Contact_Damage_Area" type="Area2D" parent="Attack_Component"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Component/Contact_Damage_Area"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_p7bth")
debug_color = Color(0.654902, 0.0470588, 0.317647, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemies"]]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_vm3b1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_tbseo")
hframes = 10
vframes = 5
frame = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"Lumber bot": SubResource("AnimationLibrary_vi1w7")
}

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("idle", "attack", "pursue", "death")]
script = ExtResource("4_a0ufa")
enemy_name = "Lumber bot"
idle = NodePath("Idle")
attack = NodePath("Attack")
pursue = NodePath("Pursue")
death = NodePath("Death")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("5_7hv1n")

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource("6_mjvca")

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("7_r1604")

[node name="Pursue" type="Node2D" parent="StateMachine"]
script = ExtResource("8_yfgwt")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0

[node name="LedgeCheck" type="RayCast2D" parent="."]
position = Vector2(5, 8)
target_position = Vector2(0, 6)
collision_mask = 8
